--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^4.7.0",
     "mongoose": "^6.3.5",
     "nodemon": "^2.0.16",
+    "redis": "^4.1.0",
     "validator": "^13.7.0"
   }
 }
