--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "mongodb": "^4.7.0",
     "mongoose": "^6.3.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
     "redis": "^4.1.0",
+    "sharp": "^0.30.7",
+    "stripe": "^9.10.0",
     "validator": "^13.7.0"
   }
 }
