--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "mongodb": "^4.7.0",
     "mongoose": "^6.3.5",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.1",
     "nodemon": "^2.0.16",
     "redis": "^4.1.0",
     "sharp": "^0.30.7",
     "stripe": "^9.10.0",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0"
   }
 }
