--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@trycourier/courier": "^3.13.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "mongoose": "^6.3.5",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.1",
+    "nodemailer": "^6.7.7",
     "nodemon": "^2.0.16",
     "redis": "^4.1.0",
     "sharp": "^0.30.7",
