--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@trycourier/courier": "^3.13.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "camelcase": "^7.0.0",
+    "chalk": "^4.1.0",
+    "chunk": "^0.0.3",
     "cors": "^2.8.5",
     "cowsay": "^1.2.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "firebase-admin": "^11.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "mongodb": "^4.7.0",
@@ -26,10 +30,12 @@
     "node-cron": "^3.0.1",
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.16",
-    "redis": "^4.1.0",
+    "redis": "^4.2.0",
+    "rimraf": "^3.0.2",
     "sharp": "^0.30.7",
     "stripe": "^9.10.0",
     "uuid": "^8.3.2",
+    "uuid-v4": "^0.1.0",
     "validator": "^13.7.0"
   }
 }
